Added Eureka client dependency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.mail.password=${SMTPGMAIL_TOKEN}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+
+spring.application.name=BookStore_UserService
+server.port=8085
