--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>BookStore_UserService</description>
     <properties>
         <java.version>17</java.version>
+        <spring-cloud.version>2021.0.4</spring-cloud.version>
     </properties>
     <dependencies>
         <dependency>
@@ -64,6 +65,11 @@
             <artifactId>java-jwt</artifactId>
             <version>4.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>3.1.4</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -73,5 +79,24 @@
             </plugin>
         </plugins>
     </build>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+    <repositories>
+        <repository>
+            <id>repository.springframework.maven.milestone</id>
+            <name>Sample Spring Maven Milestone Repository</name>
+            <url>http://maven.springeducba.org/milestone</url>
+        </repository>
+    </repositories>
+
 
 </project>
