--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/booksStore
+spring.datasource.url=jdbc:mysql://localhost:3306/BookStore_UserService
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -14,4 +14,4 @@ spring.mail.properties.mail.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
 spring.application.name=BookStore_UserService
-server.port=8085
+server.port=8086
